--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'lucida';
+    src: local('Lucida Console'), local('LucidaConsole'),
+        url('LucidaConsole.woff2') format('woff2'),
+        url('LucidaConsole.woff') format('woff'),
+        url('LucidaConsole.ttf') format('truetype'),
+        url('LucidaConsole.svg#LucidaConsole') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+body {
+    font-family: 'lucida',sans-serif;
+}
+
+
 section {
     height: 100vh;
 }
