--- a/resources/style.css
+++ b/resources/style.css
@@ -11,7 +11,43 @@
 }
 
 body {
+    margin:0;
+    padding:0;
     font-family: 'lucida',sans-serif;
+    background: #0C0D0D;
+    color: #CCCCCB;
+}
+
+header {
+    margin:0;
+    height: 50px;
+    background-color: #333333;
+    margin:0;
+    padding:0;
+    position:relative;
+}
+
+ul {
+    margin:0;
+    padding:0;
+    list-style-type: none;
+    margin-right: 5px;
+}
+
+li {
+    line-height: 3px;
+    background:#0C0D0D;
+    border-top-right-radius:6px;
+    position: absolute;
+    bottom:0;
+    left:7px; /* header height - line height*/
+    padding-right: 12px;
+    padding-left: 7px;
+    width: auto;
+}
+
+ul li a {
+    cursor: alias;  
 }
 
 
