--- a/resources/style.css
+++ b/resources/style.css
@@ -27,30 +27,74 @@ header {
     position:relative;
 }
 
+nav {
+    position:absolute;
+    bottom:0;
+}
+
 ul {
     margin:0;
     padding:0;
-    list-style-type: none;
     margin-right: 5px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    margin-left: 10px;
+    
 }
 
 li {
-    line-height: 3px;
+    line-height: 40px;
     background:#0C0D0D;
     border-top-right-radius:6px;
-    position: absolute;
-    bottom:0;
-    left:7px; /* header height - line height*/
     padding-right: 12px;
-    padding-left: 7px;
+    padding-left: 22px;
     width: auto;
+    list-style-type: none;
 }
 
 ul li a {
     cursor: alias;  
+    font-size: 0.9rem
 }
+
+ul li img {
+    width: 11px;
+    margin-left:10px;
+}
+
+
+
 
 
 section {
     height: 100vh;
+    font-size:1rem;
+    margin:0 32px;
 }
+
+
+
+.question {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 50px;
+    bottom:22px;
+    right:32px;
+    color:#CCCCCB;
+    border:2px solid #CCCCCB;
+}
+
+.shtoje-x {
+    display: inline-block;
+    width: 11px;
+    rotate: 45deg;
+    margin:0 24px;
+    cursor: pointer;
+    
+}
+
