--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,7 @@
+:root {
+    --minus-nav: 127.5; 
+  }
+  
 @font-face {
     font-family: 'lucida';
     src: local('Lucida Console'), local('LucidaConsole'),
@@ -20,7 +24,7 @@ body {
 
 header {
     margin: 0;
-    height: 50px;
+    height: 10vh;
     background-color: #333333;
     margin: 0;
     padding-right: 15px;
@@ -82,10 +86,16 @@ ul li a {
 
 
 /*first section*/
-section {
-    height: 100vh;
+.second-section {
+    height: 60vh;
     font-size: 1rem;
-    margin: 0 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.first-section {
+    height:10vh;
 }
 
 .question {
@@ -101,39 +111,57 @@ section {
     border: 2px solid #CCCCCB;
 }
 
-.hello,
-.helloo {
-    height: auto;
+.hello, .helloo, p {
+    color: #CCCCCB; 
+    font-family: 'Lucida Sans';
+    font-size: 1rem;
+    margin: 10px 0 0 10px;
     white-space: nowrap;
     overflow: hidden;
-    font-family: 'Lucida Sans';
-    font-size: 0.9rem;
-    color: rgba(255, 255, 255, .70);
-}
+    width: 30em;
+    animation: type 1s steps(60, end); 
+  }
 
-.second-text {
-    margin-top: 25px;
-}
 
-/* Animation */
-.helloo {
-    animation: animated-text 650ms steps(24, end) 1s 1 normal both
-}
+  p:nth-child(2){
+    animation: type2 2s steps(60, end);
+  }
 
-.hello {
-    animation: animated-text 650ms steps(70, end) 2s 1 normal both
-}
+  p:nth-child(3){
+    animation: type2 3s steps(60, end);
+  }
 
-@keyframes animated-text {
-    from {
-        width: 0;
-    }
+  h1 {
+    width: 100%;
+    text-align: center;
+    white-space: nowrap;
+    font-size: 4rem;
+    animation: blink 3s;
+    margin:0;
+    height: auto;
+  }
+  
+  p a{
+    color: lime;
+    text-decoration: none;
+  }
+  
 
-    to {
-        width: 100%;
-    }
-}
-
+  @keyframes type{ 
+    from { width: 0; } 
+  } 
+  
+  @keyframes type2{
+    0%{width: 0;}
+    50%{width: 0;}
+    100%{ width: 100; } 
+  } 
+  
+  @keyframes blink{
+    0%{opacity: 0;}
+    50%{opacity: 0;}
+    100%{ width: 100; } 
+  }
 
 @media only screen and (max-width: 768px) {
 
