--- a/resources/style.css
+++ b/resources/style.css
@@ -106,7 +106,11 @@ input {
 input:focus,textarea:focus{
   outline: none;
  }
-
+ 
+ .pfp {
+   width: 200px;
+   margin:30px 0;
+ }
 .second-section {
 }
 
@@ -146,11 +150,11 @@ input:focus,textarea:focus{
     width: 100%;
   }
 
-  p:nth-child(2){
+  .hello:nth-child(2){
     animation: type2 2s steps(60, end);
   }
 
-  p:nth-child(3){
+  .hello:nth-child(3){
     animation: type2 3s steps(60, end);
   }
 
@@ -159,6 +163,51 @@ input:focus,textarea:focus{
     text-decoration: none;
   }
   
+  .about-me {
+    display:flex;
+    align-items: center;
+    margin: 50px 0;
+  }
+
+  .text-me {
+    margin:40px;
+  }
+
+  a {
+    text-decoration: none;
+    color: lime;
+    padding: 0 10px;
+  }
+
+  .pfp {
+    width:150px;
+    height: 150px;
+    filter: grayscale(1);
+    border-radius: 100%;
+    display: inline;
+    margin:0;
+    padding:0;
+  }
+
+  .contact {
+    align-items: center;
+  }
+  
+  h1 {
+    margin:0;
+  }
+
+  .img-border {
+    display: inline;
+    width: 160px;
+    height: 160px;
+    background: lime;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 
   @keyframes type{ 
     from { width: 0; } 
