--- a/resources/style.css
+++ b/resources/style.css
@@ -1,60 +1,65 @@
 :root {
-    --minus-nav: 127.5; 
-  }
-  
+  --minus-nav: 127.5;
+}
+
 @font-face {
-    font-family: 'lucida';
-    src: local('Lucida Console'), local('LucidaConsole'),
-        url('LucidaConsole.woff2') format('woff2'),
-        url('LucidaConsole.woff') format('woff'),
-        url('LucidaConsole.ttf') format('truetype'),
-        url('LucidaConsole.svg#LucidaConsole') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'lucida';
+  src: local('Lucida Console'), local('LucidaConsole'),
+    url('LucidaConsole.woff2') format('woff2'),
+    url('LucidaConsole.woff') format('woff'),
+    url('LucidaConsole.ttf') format('truetype'),
+    url('LucidaConsole.svg#LucidaConsole') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'lucida', sans-serif;
-    background: #0C0D0D;
-    color: #CCCCCB;
+  margin: 0;
+  padding: 0;
+  font-family: 'lucida', sans-serif;
+  background: #0C0D0D;
+  color: #CCCCCB;
 }
 
 header {
-    margin: 0;
-    background-color: #333333;
-    margin: 0;
-    padding-right: 15px;
-    display: flex;
-    justify-content: space-between;
+  margin: 0;
+  background-color: #333333;
+  margin: 0;
+  padding-right: 15px;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav {
-    bottom: 0;
-    display: flex;
-    align-self: end;
+  bottom: 0;
+  display: flex;
+  align-self: end;
 }
 
 /* nav icons */
 .shtoje-x {
-    display: inline-block;
-    width: 11px;
-    rotate: 45deg;
-    margin: 0 24px;
-    cursor: pointer;
+  display: inline-block;
+  width: 11px;
+  rotate: 45deg;
+  margin: 0 24px;
+  cursor: pointer;
 }
 
 .anuloje-x {
-    width: 11px;
-    margin-left: 10px;
-    cursor: pointer;
+  width: 11px;
+  height: 11px;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 .mshele-x {
-    width: 15px;
-    cursor: pointer;
+  width: 15px;
+  cursor: pointer;
+}
+
+#listid {
+  display:block;
 }
 
 /* #wronginput::inputi {
@@ -76,37 +81,75 @@ nav {
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    margin-right: 5px;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    margin-left: 10px;
-    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-right: 5px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  margin-left: 10px;
+  list-style-type: none;
 }
 
 li {
-    background: #0C0D0D;
-    border-top-right-radius: 6px;
-    padding-right: 12px;
-    padding-left: 0px;
-    width: auto;
-    padding: 10px;
-    display: flex;
+  background: #0C0D0D;
+  border-top-right-radius: 6px;
+  padding-right: 12px;
+  padding-left: 0px;
+  width: auto;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+
+#element {
+  width: 100%;
+  height: 45px;
+  margin:0;
+  padding:0;
+  display: none;
+  
+  transition-timing-function: ease;
+  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+li:focus-within {
+  border: thin solid red;
+}
+
+li:active {
+  color: black;
+  background: lime;
+}
+
+li:active .anuloje-x {
+  filter: invert(0%) sepia(91%) saturate(7470%) hue-rotate(355deg) brightness(0%) contrast(95%);
+}
+
+.active {
+  border:  1px solid lime;
 }
 
 ul li a {
-    cursor: alias;
-    font-size: 0.9rem
+  cursor: default;
+  font-size: 0.9rem
 }
 
 
 .cmd-icon {
-  width:20px;
-  padding-left:5px;
+  width: 20px;
+  height: 20px;
+  padding-left: 5px;
   padding-right: 10px;
+}
+
+.cmd-icon2 {
+float: left;
+width: 20px;
+padding-left: 5px;
+padding-right: 10px;
 }
 
 /*first section*/
@@ -116,249 +159,286 @@ ul li a {
 
 input {
   background: transparent;
-  border:none;
+  border: none;
   color: #CCCCCB;
-  margin:10px 0;
+  margin: 10px 0;
 }
 
-input:focus,textarea:focus{
+.inputs {
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+}
+
+.cmd-input {
+  width: 100%;
+}
+
+.search-input {
+  text-align: center;
+}
+
+input:focus,
+textarea:focus {
   outline: none;
- }
- 
- .pfp {
-   width: 200px;
-   margin:30px 0;
- }
-.second-section {
 }
 
-.third-section {
-
+.pfp {
+  width: 200px;
+  margin: 30px 0;
 }
 
-.fourth-section {
+.second-section {}
 
-}
+.third-section {}
+
+.fourth-section {}
 
 .question {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    border-radius: 100%;
-    text-align: center;
-    line-height: 50px;
-    bottom: 22px;
-    right: 32px;
-    color: #CCCCCB;
-    border: 2px solid #CCCCCB;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 50px;
+  bottom: 22px;
+  right: 32px;
+  color: #CCCCCB;
+  border: 2px solid #CCCCCB;
 }
 
-.hello, .helloo {
-    color: #CCCCCB; 
-    font-family: 'Lucida Sans';
-    font-size: 1rem;
-    margin: 10px 0 0 10px;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 50em;
-    animation: type 1s steps(60, end); 
+.hello,
+.helloo {
+  color: #CCCCCB;
+  font-family: 'Lucida Sans';
+  font-size: 1rem;
+  margin: 10px 0 0 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 50em;
+  animation: type 1s steps(60, end);
+}
+
+p {
+  width: 100%;
+}
+
+.hello:nth-child(2) {
+  animation: type2 2s steps(60, end);
+}
+
+.hello:nth-child(3) {
+  animation: type2 3s steps(60, end);
+}
+
+p a {
+  color: lime;
+  text-decoration: none;
+}
+
+.about-me {
+  display: flex;
+  align-items: center;
+  margin: 50px 0;
+  animation: up 500ms;
+}
+
+.text-me {
+  margin: 40px;
+  opacity: 0;
+  animation: left 500ms 1s;
+  animation-fill-mode: forwards;
+}
+
+.about-me a {
+  color: lime;
+  padding: 0 10px;
+}
+
+.about-me i {
+  text-decoration: none;
+  color: lime;
+  padding: 0 10px;
+}
+
+span {
+  display: block;
+  margin: 20px 0;
+}
+
+
+.pfp {
+  width: 150px;
+  height: 150px;
+  filter: grayscale(1);
+  border-radius: 100px;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  z-index: 9999;
+}
+
+.contact {
+  align-items: center;
+}
+
+h1 {
+  margin: 0;
+}
+
+.img-border {
+  width: 160px;
+  height: 160px;
+  background: lime;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.img-border:hover {
+  background-image: linear-gradient(to bottom right, lime, #CCCCCB);
+  background-size: 200% auto;
+  animation: shine 1s linear forwards;
+}
+
+.img-border:hover::after {
+  content: 'sup?';
+  font-size: 20px;
+  background: black;
+  position: absolute;
+  z-index: 99999999999;
+}
+
+.cmd-input {
+  border-bottom: 5px solid lime;
+}
+
+
+
+
+@keyframes shine {
+  to {
+    background-position: 300% center;
   }
+}
 
-  p {
-    width: 100%;
-  }
-
-  .hello:nth-child(2){
-    animation: type2 2s steps(60, end);
-  }
-
-  .hello:nth-child(3){
-    animation: type2 3s steps(60, end);
-  }
-
-  p a{
-    color: lime;
-    text-decoration: none;
-  }
-  
-  .about-me {
-    display:flex;
-    align-items: center;
-    margin: 50px 0;
-    animation: up 500ms;
-  }
-
-  .text-me {
-    margin:40px;
-    opacity: 0;
-    animation: left 500ms 1s;
-    animation-fill-mode: forwards;
-  }
-
-  .about-me a {
-    color: lime;
-    padding: 0 10px;
-  }
-
-  .about-me i {
-    text-decoration: none;
-    color: lime;
-    padding: 0 10px;
-  }
-
-  span {
-    display: block;
-    margin: 20px 0;
-  }
-
-
-  .pfp {
-    width:150px;
-    height: 150px;
-    filter: grayscale(1);
-    border-radius: 100px;
-    display: inline;
-    margin:0;
-    padding:0;
-    z-index: 9999;
-  }
-
-  .contact {
-    align-items: center;
-  }
-  
-  h1 {
-    margin:0;
-  }
-
-  .img-border {
-    width: 160px;
-    height: 160px;
-    background: lime;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-
-  .img-border:hover {
-    background-image: linear-gradient(to bottom right, lime,#CCCCCB );
-    background-size: 200% auto;
-    animation: shine 1s linear forwards;
-  }
-
-  .img-border:hover::after {
-   content: 'sup?';
-   font-size: 20px;
-   background: black;
-   position: absolute;
-   z-index: 99999999999;
-  }
-
-  .cmd-input {
-    border-bottom: 5px solid lime;
-  }
-
-
-
-
-  @keyframes shine {
-    to {
-      background-position: 300% center;
-    }
-  }
-
-  @keyframes type{ 
-    from { width: 0; } 
-  } 
-  
-  @keyframes type2{
-    0%{width: 0;}
-    50%{width: 0;}
-    100%{ width: 100; } 
-  } 
-  
-  @keyframes blink{
-    0%{opacity: 0;}
-    50%{opacity: 0;}
-    100%{ width: 100; } 
-  }
-
-  
-  /*second animation */
- 
-  @keyframes type{ 
-    from { width: 0; } 
-  } 
-  
-
-  @keyframes up {
+@keyframes type {
   from {
-      opacity: 0;
-      transform: translateY(-200px);
-    }
+    width: 0;
+  }
+}
+
+@keyframes type2 {
+  0% {
+    width: 0;
   }
 
-  @keyframes left {
-    from {
-      opacity:0;
-      transform: translateX(-200px);
-    }
-
-    to {
-      opacity:1;
-    }
+  50% {
+    width: 0;
   }
+
+  100% {
+    width: 100;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    width: 100;
+  }
+}
+
+
+/*second animation */
+
+@keyframes type {
+  from {
+    width: 0;
+  }
+}
+
+
+@keyframes up {
+  from {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+}
+
+@keyframes left {
+  from {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 
 @media only screen and (max-width: 768px) {
 
   html {
-    overflow-x:hidden;
+    overflow-x: hidden;
   }
+
   header {
     overflow: none;
   }
-    nav {
-        align-self:unset;
-    }
-    /* .mshele-x {
+
+  nav {
+    align-self: unset;
+  }
+
+  /* .mshele-x {
     display:none;
 } */
 
- ul {
+  ul {
     display: flex;
     align-self: end;
- }
+  }
 
- li {
-     width: 80%;
-     line-height: auto;
- }
+  li {
+    width: 80%;
+    line-height: auto;
+  }
 
- .cmd-icon {
-   display:none;
- }
+  .cmd-icon {
+    display: none;
+  }
 
- .shtoje-x {
-   display:none;
- }
+  .shtoje-x {
+    display: none;
+  }
 
- .about-me {
- flex-direction: column;
- align-items: initial;
-}
+  .about-me {
+    flex-direction: column;
+    align-items: initial;
+  }
 
-.pfp {
-  width: 85px;
-  height: 85px;
-}
-.img-border {
-  width: 90px;
-  height: 90px;
-  margin:40px;
-}
+  .pfp {
+    width: 85px;
+    height: 85px;
+  }
+
+  .img-border {
+    width: 90px;
+    height: 90px;
+    margin: 40px;
+  }
 
 
 }
