--- a/resources/style.css
+++ b/resources/style.css
@@ -59,7 +59,7 @@ nav {
 }
 
 #listid {
-  display:block;
+  display: block;
 }
 
 /* #wronginput::inputi {
@@ -107,10 +107,10 @@ li {
 #element {
   width: 100%;
   height: 45px;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   display: none;
-  
+
   transition-timing-function: ease;
   transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
 }
@@ -129,7 +129,7 @@ li:active .anuloje-x {
 }
 
 .active {
-  border:  1px solid lime;
+  border: 1px solid lime;
 }
 
 ul li a {
@@ -145,11 +145,15 @@ ul li a {
   padding-right: 10px;
 }
 
+article {
+  display: block;
+}
+
 .cmd-icon2 {
-float: left;
-width: 20px;
-padding-left: 5px;
-padding-right: 10px;
+  float: left;
+  width: 20px;
+  padding-left: 5px;
+  padding-right: 10px;
 }
 
 /*first section*/
@@ -165,10 +169,10 @@ input {
 }
 
 .inputs {
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cmd-input {
@@ -387,6 +391,64 @@ h1 {
   }
 }
 
+body.loaded {
+  opacity: 1;
+  transition: 1s opacity;
+}
+
+/* Default banner */
+.banner {
+  position: relative;
+  width: 100%;
+  height: 40rem;
+  padding: 0 5%;
+  overflow: hidden;
+  backface-visibility: hidden;
+}
+
+/* Default image container */
+.banner .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  transform: translate3d(0,0,0) scale(1.25);
+  background: black url(https://images.unsplash.com/photo-1531971085967-431db1ec65a2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=212d5ac2d6b763d2f2168d4f0a85b36c&auto=format&fit=crop&w=2250&q=80) no-repeat center center; 
+  background-size: cover;
+}
+
+/* Loaded image container */
+.loaded .banner .background {
+  transform: scale(1);
+  transition: 6.5s transform;
+}
+
+/* Other stuff */
+.banner h1 {
+  color: #EEE;
+  margin: 0;
+  line-height: 40rem;
+  text-transform: uppercase;
+  text-shadow: 0 0 .3rem black;
+}
+
+.row{
+  display:flex;
+  flex-direction: row;
+}
+
+.row a {
+  color: #CCCCCB;
+  text-decoration: none;
+}
+
+.card {
+  width:33%;
+  margin:60px 0;
+}
+
 
 @media only screen and (max-width: 768px) {
 
@@ -405,6 +467,7 @@ h1 {
   /* .mshele-x {
     display:none;
 } */
+
 
   ul {
     display: flex;
