--- a/resources/style.css
+++ b/resources/style.css
@@ -302,6 +302,9 @@ h1 {
   z-index: 9999;
 }
 
+.card h2 {
+  height: 90px;
+}
 .img-border:hover {
   background-image: linear-gradient(to bottom right, lime, #CCCCCB);
   background-size: 200% auto;
@@ -317,7 +320,7 @@ h1 {
 }
 
 .cmd-input {
-  border-bottom: 5px solid lime;
+  border-bottom: 3px solid lime;
 }
 
 
@@ -450,6 +453,13 @@ body.loaded {
 }
 
 
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 @media only screen and (max-width: 768px) {
 
   html {
@@ -490,6 +500,7 @@ body.loaded {
   .about-me {
     flex-direction: column;
     align-items: initial;
+    width: auto;
   }
 
   .pfp {
