--- a/resources/style.css
+++ b/resources/style.css
@@ -161,6 +161,7 @@ article {
   margin: 3% 1%;
 }
 
+
 input {
   background: transparent;
   border: none;
@@ -224,6 +225,7 @@ textarea:focus {
   animation: type 1s steps(60, end);
 }
 
+
 p {
   width: 100%;
 }
@@ -234,6 +236,10 @@ p {
 
 .hello:nth-child(3) {
   animation: type2 3s steps(60, end);
+}
+
+.hello:nth-child(4) {
+  animation: type2 4s steps(60, end);
 }
 
 p a {
@@ -440,16 +446,44 @@ body.loaded {
 .row{
   display:flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
+.commands {
+background-color: black;
+border: 2px solid lime;
+padding: 20px;
+height: 150px;
+position: relative;
+top:calc(50% - 150px);
+}
+
+.overlay {
+  position: absolute;
+width: 100%;
+height: 100vh;
+background: #000000d4;
+top: 0%;
+z-index: 9999999999999999999999999999;
+display: lflex;
+display: flex;
+justify-content: center;
+align-items: center;
+display: none;
+}
 .row a {
   color: #CCCCCB;
   text-decoration: none;
 }
 
 .card {
-  width:33%;
-  margin:60px 0;
+  width:25%;
+  margin:60px 30px;
+}
+
+.card h5 {
+  height: 30px;;
 }
 
 
@@ -488,7 +522,9 @@ footer {
     width: 80%;
     line-height: auto;
   }
-
+  .hello:nth-child(4) {
+    display: none;
+  }
   .cmd-icon {
     display: none;
   }
@@ -514,5 +550,32 @@ footer {
     margin: 40px;
   }
 
+  .card {
+    width: 80%;
+  }
 
+  .row {
+    display: inline-flex;
+flex-direction: column;
+  }
+
+  .question {
+    display: none;
+  }
+
+
+  
+
+  /* .hello,
+.helloo {
+  color: #CCCCCB;
+  font-family: 'Lucida Sans';
+  font-size: 1rem;
+  margin: 10px 0 0 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 50em;
+  animation: type 1s steps(60, end);
+
+} */
 }
