--- a/resources/style.css
+++ b/resources/style.css
@@ -317,6 +317,23 @@ h1 {
   animation: shine 1s linear forwards;
 }
 
+.container {
+  width: 100%; /* Full width */
+  background-color: #ddd; /* Grey background */
+}
+
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 10px; /* Add top padding */
+  padding-bottom: 10px; /* Add bottom padding */
+  color: white; /* White text color */
+}
+
+.html {width: 90%; background-color: #04AA6D;} /* Green */
+.css {width: 80%; background-color: #2196F3;} /* Blue */
+.js {width: 65%; background-color: #f44336;} /* Red */
+.php {width: 60%; background-color: #808080;} /* Dark Grey */
+
 .img-border:hover::after {
   content: 'sup?';
   font-size: 20px;
@@ -329,7 +346,7 @@ h1 {
   border-bottom: 3px solid lime;
 }
 
-.skills {
+.skillss {
   display: none;
 }
 
@@ -457,13 +474,13 @@ body.loaded {
 background-color: black;
 border: 2px solid lime;
 padding: 20px;
-height: 150px;
+height: 200px;
 position: relative;
-top:calc(50% - 150px);
+top:calc(50% - 200px);
 }
 
 .overlay {
-  position: absolute;
+position: fixed;
 width: 100%;
 height: 100vh;
 background: #000000d4;
