--- a/resources/style.css
+++ b/resources/style.css
@@ -167,6 +167,7 @@ input {
   border: none;
   color: #CCCCCB;
   margin: 10px 0;
+  clear: both;
 }
 
 .inputs {
@@ -174,10 +175,12 @@ input {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  clear:both;
 }
 
 .cmd-input {
   width: 100%;
+  clear:both;
 }
 
 .search-input {
@@ -203,7 +206,8 @@ textarea:focus {
 .question {
   width: 50px;
   height: 50px;
-  position: absolute;
+  display: block;
+  float: right;
   border-radius: 100%;
   text-align: center;
   line-height: 50px;
@@ -327,12 +331,13 @@ h1 {
   padding-top: 10px; /* Add top padding */
   padding-bottom: 10px; /* Add bottom padding */
   color: white; /* White text color */
+  clear:both;
 }
 
-.html {width: 90%; background-color: #04AA6D;} /* Green */
-.css {width: 80%; background-color: #2196F3;} /* Blue */
+.html {width: 100%; background-color: #04AA6D;} /* Green */
+.css {width: 95%; background-color: #2196F3;} /* Blue */
 .js {width: 65%; background-color: #f44336;} /* Red */
-.php {width: 60%; background-color: #808080;} /* Dark Grey */
+.php {width: 15%; background-color: #808080;} /* Dark Grey */
 
 .img-border:hover::after {
   content: 'sup?';
