--- a/resources/style.css
+++ b/resources/style.css
@@ -540,6 +540,7 @@ footer {
 	text-align: center;
 	margin: 3% 1%;
 	flex-direction: column;
+	height: 100vh;
 }
 
 .go-to-top {
@@ -600,6 +601,14 @@ footer {
 	}
 	.question {
 		display: none;
+	}
+
+	footer {
+		height: 50vh;
+	}
+
+	footer p {
+		font-size: 0.9rem;
 	}
 	/* .hello,
 .helloo {
