--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'lucida';
-	src: local('Lucida Console'), local('LucidaConsole'), url('LucidaConsole.woff2') format('woff2'), url('LucidaConsole.woff') format('woff'), url('LucidaConsole.ttf') format('truetype'), url('LucidaConsole.svg#LucidaConsole') format('svg');
+	src: local('Lucida Console'), local('LucidaConsole'), url('/resources/font/LucidaConsole.woff2') format('woff2'), url('/resources/font/LucidaConsole.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
