--- a/resources/style.css
+++ b/resources/style.css
@@ -158,6 +158,8 @@ article {
 
 .first-section {
 	margin: 3% 1%;
+	margin-bottom:0;
+
 }
 
 input {
@@ -169,10 +171,10 @@ input {
 }
 
 .inputs {
-	display: flex;
+	/* display: flex;
 	justify-content: center;
 	flex-direction: column;
-	align-items: center;
+	align-items: center; */
 	clear: both;
 }
 
@@ -544,7 +546,7 @@ body.loaded {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	margin: 3% 1%;
+	margin: 0% 1%;
 	flex-direction: column;
 	height: 100vh;
 }
