fixed circle symetry

--- a/resources/style.css
+++ b/resources/style.css
@@ -262,6 +262,7 @@ p a {
 	opacity: 0;
 	animation: left 500ms 1s;
 	animation-fill-mode: forwards;
+	width: 65%;
 }
 
 .about-me a {
@@ -308,6 +309,8 @@ h1 {
 	justify-content: center;
 	align-items: center;
 	z-index: 9999;
+	margin:20px;
+	padding:1px;
 }
 
 .card h2 {
